[tool.poetry]
name = "icfp2021"
version = "0.0.0"
description = "ICFP 2021"
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "solver" },
]

[tool.poetry.scripts]
solver = 'solver.app:run'

[tool.poetry.dependencies]
python = "^3.9"
z3-solver = "^4.8.10"
click = "^8.0.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^3.9.2"
pytest = "^6.2.4"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


