[tool.poetry]
name = "icfp2021"
version = "0.0.0"
description = "ICFP 2021"
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "solver" },
]

[tool.poetry.scripts]
solver = 'solver.app:run'

[tool.poetry.dependencies]
click = "^8.0.1"
pydantic = "^1.8.2"
python = "^3.9"
requests = "^2.25.1"
z3-solver = "^4.8.10"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.910"
parameterized = "^0.8.1"
pytest = "^6.2.4"
types-requests = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


