[tool.poetry]
name = "icfp2021"
version = "0.0.0"
description = "ICFP 2021"
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "solver" },
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry.scripts]
solver = 'solver.app:run'
submit = 'solver.submit:submit_problem'

[tool.poetry.dependencies]
click = "^8.0.1"
pydantic = "^1.8.2"
python = "^3.9"
requests = "^2.25.1"
z3-solver = "^4.8.10"
fastapi = "^0.66.0"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^24.3"
flake8 = "^3.9.2"
mock = "^4.0.3"
mypy = "^0.910"
parameterized = "^0.8.1"
pytest = "^6.2.4"
requests_mock = "^1.9.3"
types-requests = "^2.25.0"
isort = "^5.9.2"
uvicorn = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


